Fixed join page sizing on mobile

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -94,3 +94,12 @@ header
 	width: 95%;
 	margin-bottom: 30px;
 }
+
+.answers div
+{
+	height: 512px;
+	width: 100%;
+	display: table-row;
+	vertical-align:bottom;
+	line-height: 60px;
+}
